# olivetree

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: book_search_engine.rs
src/: lib.rs  main.rs
src/executor/: executor.rs  handlers.rs  mod.rs  protocol.rs  queue.rs  registry.rs  tests.rs  types.rs
src/ingestion/: handlers.rs  mod.rs  types.rs
src/membership/: mod.rs  service.rs  tests.rs  types.rs
src/search/: engine.rs  handlers.rs  mod.rs  tokenizer.rs  types.rs
src/storage/: handlers.rs  memory.rs  mod.rs  partitioner.rs  protocol.rs
