[package]
name = "olive-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.149"
axum = { version = "0.7", features = ["macros"] }
async-trait = "0.1.89"
regex = "1.12.2"

sysinfo = "0.30"
